make generate_sdks